# kbask

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  tool-install.sh
.github/workflows/: release.yml
scripts/: _installer_common.py  install-agy.py  install-claude.py  install-codex.py  install-gemini.py
src/askme/: __init__.py  cli.py  diff.py  health.py  install.py  meta.py  serve.py  state.py  update.py
src/askme/backends/: graphify.py  understand.py
src/askme/tools/: hybrid.py  semantic.py  structural.py
src/kbask/: __init__.py  cli.py  install.py  serve.py  tokens.py  update.py  update_bin.py
src/kbask/backends/: graphify.py  understand.py
src/kbask/installers/: claude.py  codex.py  common.py  gemini.py
src/kbask/prompts/: kbask.md
src/kbask/tools/: hybrid.py
tests/: test_diff.py  test_hybrid.py  test_update_bin.py
